[tool.poetry]
name = "remote-comands-handler"
version = "0.1.0"
description = ""
authors = ["Stijn Bijnen <stijn.bijnen@evergen.energy>"]
readme = "README.md"
packages = [{include = "main.py"}]

[tool.poetry.dependencies]
python = "^3.11"
pymodbus = "^3.6.8"
paho-mqtt = "^2.0.0"
pyyaml = "^6.0"
pydantic = "^2.7.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pylint = "^2.17.4"
pytest = "^7.3.1"
flake8 = "^6.0.0"
coveralls = "^3.3.1"
freezegun = "^1.2.2"
yamllint = "^1.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
